Make squares black on hover and add a clear button

--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ body {
   width: max-content;
 }
 
+.button {
+  width: max-content;
+  margin: 0 auto;
+}
+
 .square {
   border: 1px solid black;
   border-collapse: collapse;
