--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
 #container {
   margin: auto;
   width: max-content;
+  border: 1px solid black;
 }
 
 .button {
@@ -16,10 +17,9 @@ body {
 }
 
 .square {
-  border: 1px solid black;
-  border-collapse: collapse;
   flex: 1 1;
   height: 30px;
+  box-sizing: border-box;
 }
 
 .row {
